--- a/modules/404/_404.module.scss
+++ b/modules/404/_404.module.scss
@@ -20,7 +20,7 @@
 	}
 
 	@include m-360 {
-		padding-top: 75px;
+		padding-top: 65px;
 	}
 
 	.contentWrapper {
