--- a/modules/Program/Program.module.scss
+++ b/modules/Program/Program.module.scss
@@ -53,7 +53,7 @@
 		}
 
 		@include m-360 {
-			margin-top: 75px;
+			margin-top: 65px;
 			width: 100%;
 			height: 150px;
 		}
