--- a/modules/Reviews/Reviews.module.scss
+++ b/modules/Reviews/Reviews.module.scss
@@ -20,7 +20,7 @@
 		}
 
 		@include m-360 {
-			padding-top: $m360Max + 75px;
+			padding-top: $m360Max + 65px;
 		}
 	}
 
